Add AppleMusic Module

--- a/overlay.html
+++ b/overlay.html
@@ -17,4 +17,5 @@
 <script type="text/javascript" src="modules/alert-banner/alert-banner.js"></script>
 <script type="text/javascript" src="modules/big-emote/big-emote.js"></script>
 <script type="text/javascript" src="modules/alert-video/alert-video.js"></script>
+<script type="text/javascript" src="modules/apple-music/apple-music.js"></script>
 </html>
