--- a/overlay.html
+++ b/overlay.html
@@ -4,17 +4,20 @@
   <title>Antarex | Streamer.bot Overlay</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="overlay.css">
+  <!-- Required core script -->
   <script type="text/javascript" src="https://unpkg.com/@streamerbot/client/dist/streamerbot-client.js"></script>
+  <script type="text/javascript" src="overlay-core.js"></script>
 </head>
 <body>
   <div id="statusContainer">Connecting...</div>    
   <div id="mainContainer"></div>
 </body>
-<script type="text/javascript" src="overlay-core.js"></script>
+<!-- Modules -->
 <script type="text/javascript" src="modules/popup/popup.js"></script>
 <script type="text/javascript" src="modules/chat/chat.js"></script>
 <script type="text/javascript" src="modules/scrolling-banner/scrolling-banner.js"></script>
 <script type="text/javascript" src="modules/alert-banner/alert-banner.js"></script>
 <script type="text/javascript" src="modules/big-emote/big-emote.js"></script>
 <script type="text/javascript" src="modules/alert-video/alert-video.js"></script>
+<script type="text/javascript" src="modules/apple-music/apple-music.js"></script>
 </html>
